<resources>
    <string name="app_name">cineClub</string>
    <string name="txtBonjour">Bonjour !</string>
    <string name="txtCineclub">Choisissez une catégorie</string>
    <string name="txtBtnPolicier">POLICIER</string>
    <string name="txtBtnFiction">FICTION</string>
    <string name="txtBtnDocumentaire">DOCUMENTAIRE</string>
    <string name="txtBtnSeries">SERIES</string>
    <string name="txtMenuRecherche">Rechercher un film</string>
    <string name="txtMenuReserver">Réserver un film</string>
    <string name="txtMenuMagasin">Magasin</string>
    <string name="txtMenuPrésentation">Présentation</string>
    <string name="txtMenuPresContact">Contact</string>
    <string name="txtMenuPresEquipe">L\'équipe</string>
    <string name="txtMenuPresCroissance">Croissance</string>
    <string name="txtListePoliciers">Liste des films policiers </string>
    <string name="txtlistefiction">Liste des fictions</string>
    <string name="txtlistedocumentaire">Liste des documentaires</string>
    <string name="txtlisteseries">Liste des series</string>
    <string name="txtbtnreturnpolicier">Retour</string>
    <string name="txtbtnreturnfiction">Retour</string>
    <string name="txtbtnreturndocumentaire">Retour</string>
    <string name="txtbtnreturnseries">Retour</string>
    <string name="txttitlereservation">Reservation</string>
    <string name="txtinforeservation">Voulez vous réserver le film \"Avatar\" ?</string>
    <string name="txtbtnconfirmerreservation">CONFIRMER</string>
    <string name="txtannulerreservation">ANNULER</string>
    <string name="txtbtnreturnreservation">Retour</string>
    <string name="txteditrecherche" />
    <string name="textview">Recherche</string>
    <string name="txttitlerecherche">Recherche</string>
    <string name="txtinforecherche">Quel film cherchez vous ?</string>
    <string name="txtbtnrechercheok">OK</string>
    <string name="txtbtnrechercheretour">Retour</string>
    <string name="txttitredemandepolicier">Titre demandé</string>
    <string name="filmImg">filmImgValue</string>
    <string name="txtrealisateur">Realisateur</string>
    <string name="txttitreligne">Titre</string>
    <string name="txtrealisateurligne">Réalisateur</string>
</resources>
