<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/filmImg"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/casa" />

    <LinearLayout
        android:id="@+id/linear_layout01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleLigne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txttitreligne"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/realisateurLigne"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/txtrealisateurligne" />
    </LinearLayout>
</LinearLayout>
